# tilepad-plugin-obs-studio

./: Cargo.toml  Makefile.toml  README.md  cspell.json
.tilepadPlugin/: manifest.json  manifest.toml
.tilepadPlugin/ui/: connect.html  recording.html  streaming.html  switch_profile.html  switch_scene.html  toggle-recording.html  virtual_camera.html
src/: action.rs  main.rs  messages.rs  plugin.rs  state.rs
