[package]
name = "tilepad-plugin-obs-studio"
version = "0.1.0"
edition = "2024"

[dependencies]
# Lock library
parking_lot = "0.12.3"

# Plugin SDK 
tilepad-plugin-sdk = "0.2.0"

# Async runtime
tokio = { version = "1.44.1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OBS websocket library
obws = "0.14.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
